# sample

./: .dockerignore  .gitignore  Dockerfile  app.py  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  routes.py
core/: conversation.py  llm.py
static/: index.html
